Fixed some errors (in English!)

--- a/HW4 Cepheid Variable Data.ipynb
+++ b/HW4 Cepheid Variable Data.ipynb
@@ -232,7 +232,7 @@
    "source": [
     "## Your Turn \n",
     "\n",
-    "Let's see how the relation looks in a different filter (colour). The HW asks for the V-band (visual) relation. Make the same plot as above, but in V-band. "
+    "Let's see how the relation looks in a different filter (colour). The HW asks for the V-band (visual) relation. Make the same plot as above, but using the V-band magnitude from the file (there are no errors, so you cannot include errors). "
    ]
   },
   {
@@ -246,7 +246,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are zero values in this data which will mess up our fit. We will need to remove them. To do this we can use a really nifty trick using the ```V_mag``` list. The below selects all values where ```V_mag=V_mag[V_mag !=0]``` selections only those with $m_V \\ne 0$. Don't forget to also select the period value only for stars where $m_V \\ne 0$. Make the plot excluding the zero values, and fit a line to the data, and overplot the best fit line. "
+    "There are zero values in this data which will mess up our fit. We will need to remove them. To do this we can use a really nifty trick using the ```V_mag``` list. This little piece of code ```V_mag=V_mag[V_mag !=0]``` selects all values of the V-band magnitude where $m_V \\ne 0$. Do this. Don't forget to also select the period value only for stars where $m_V \\ne 0$. Make the plot excluding these zero values, fit a line to the data, and overplot the best fit line. "
    ]
   },
   {
