--- a/Homework2_Functions_BoltzmanEquation_Coordinates.ipynb
+++ b/Homework2_Functions_BoltzmanEquation_Coordinates.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "The below code defines a function ```boltzman``` which will calculate this for any input values of $T, \\Delta E, g_1, g_2$. \n",
     "\n",
-    "It then calculates the value for $T=3000$ K. Run the code again to calculate the other values and make sure to comment if you have demonstrated that \"Most of the neutral hydrogen in the atmosphere of stars is in the ground state\". "
+    "It then calculates the value for $T=3000$ K. "
    ]
   },
   {
@@ -52,11 +52,51 @@
     "dE = 10.2\n",
     "g1 = 2\n",
     "g2 = 6\n",
-    "print('The fraction of Hydrogen atoms in the exited state at T = ', T, 'K is ', boltzman(T,dE,g1,g2))\n",
+    "print('The fraction of Hydrogen atoms in the exited state at T = ', T, 'K is ', boltzman(T,dE,g1,g2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loops in Python\n",
     "\n",
-    "    \n",
+    "The Homework actually asks you to calculate these fractions for multiple temperatures. Now we have defined the function, one way to do this is to set up an array of values to loop over. \n",
     "\n",
-    "\n"
+    "The code below does this, but notice I have not done the temperatures asked for. Edit the code to run with the temperatures in your HW (3000K, 6000K, 10000K and 20000K). \n",
+    "\n",
+    "To read more about lists and arrays in Python (well basically all the basics of how python stores data) I recommend 2.5 of Python for Astronomers (https://prappleizer.github.io/index.html). \n",
+    "\n",
+    "To read more about different kinds of loops see Section 4.2 of Python for Astronomers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The fraction of Hydrogen atoms in the exited state at T =  3000 K is  2.1972001196560707e-17\n",
+      "The fraction of Hydrogen atoms in the exited state at T =  7000 K is  1.3596965015473102e-07\n",
+      "The fraction of Hydrogen atoms in the exited state at T =  11000 K is  6.366061168697273e-05\n",
+      "The fraction of Hydrogen atoms in the exited state at T =  35000 K is  0.10194957033751238\n"
+     ]
+    }
+   ],
+   "source": [
+    "Temps = np.array([3000,7000,11000,35000])\n",
+    "for T in Temps:\n",
+    "    print('The fraction of Hydrogen atoms in the exited state at T = ', T, 'K is ', boltzman(T,dE,g1,g2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "MARKDOWN to edit: Explain why this demonstrates that \"Most of the neutral hydrogen in the atmosphere of stars is in the ground state\". "
    ]
   },
   {
