--- a/Homework3_StellarData.ipynb
+++ b/Homework3_StellarData.ipynb
@@ -151,7 +151,7 @@
     "\n",
     "In the cells below I will plot luminosity agains mass from the Stellar Data Table, and fit a relation of the form $L/L_\\odot = (M/M_\\odot)^\\alpha$. The best way to do this is going to be to make a $\\log - \\log$ plot, as then we will have $\\log(L/L_\\odot) = \\alpha \\log(M/M_\\odot)$, which is in the form $y=ax$ which is a straight line...\n",
     "\n",
-    "TODO: Please change the colour of the points on the plot"
+    "TODO: Please change the colour of the points on the plot. Because this uses the <a href=\"https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.scatter.html#\">Matplotlib Scatter function</a>, there are a wide range of possible colours, which you add by adding ```c=COLOUR CHOICE``` into the ```scatter``` function. Many people print <a href=\"https://matplotlib.org/stable/gallery/color/named_colors.html\">lists of possible ```COLOUR CHOICE``` names</a> to post by their workstation to make choices like this. "
    ]
   },
   {
@@ -317,14 +317,13 @@
     "## Central Temperature and Luminosity ##\n",
     "In this part you will make use of the constant density approximation (from in class) which allowed use to derive an equation for the central temperature in a star, estimate the central temperature of the stars (you may assume they all have the same composition as the Sun, i.e. $\\mu = 0.6$). \n",
     "\n",
-    "You will need to write code which uses this equation to calculate the central temperatures from the mass and radius values in the table, and plot against $\\log (L/L_{\\odot})$ (also from the table). Comment once more on the comparison between the range of luminiosities and the range of central temperatures.  \n",
+    "You will need to write code which uses this equation to calculate the central temperatures from the mass and radius values in the table, and plot it as $x$ against $y = \\log (L/L_{\\odot})$ (also from the table). Comment once more on the comparison between the range of luminiosities and the range of central temperatures.  \n",
     "\n",
     "Astropy has something really helpful here = <a href=\"http://learn.astropy.org/rst-tutorials/quantities.html\">constants</a>.... so I've got things started by importing some that you will need. \n",
     "\n",
     "HINT: pay close attention to units, and to your brackets when coding the formula. \n",
     "\n",
-    "HINT2: If you have never done algebra using arrays in Python before, there is an introduction to what this is all about in Section 2.3-2.5 of the <a href=\"https://prappleizer.github.io/index.html\">Python for Astronomers</a> book. It's probably easier than you think, and the TAs can help. \n",
-    "\n"
+    "HINT2: If you have never done algebra using arrays in Python before, there is an introduction to what this is all about in Section 2.3-2.5 of the <a href=\"https://prappleizer.github.io/index.html\">Python for Astronomers</a> book. It's probably easier than you think, and the TAs can help. \n"
    ]
   },
   {
