Updated last HW notebook

--- a/HomeworkLast_LargeScaleStructure_Clear.ipynb
+++ b/HomeworkLast_LargeScaleStructure_Clear.ipynb
@@ -65,7 +65,7 @@
     "\n",
     "# Import other libraries for use in this notebook.\n",
     "import numpy as np                  # standard Python lib for math ops\n",
-    "from scipy.misc import imsave       # save images as files\n",
+    "#from scipy.misc import imsave       # save images as files\n",
     "import pandas                       # data manipulation package\n",
     "import matplotlib.pyplot as plt     # another graphing package\n",
     "import os                           # manage local files in your Compute containers\n",
@@ -220,7 +220,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since it's right ascension, we'd expect the minimum to be 0 and the maximum to be 360 degrees (right ascension is like longitude.) Print out the min and max below."
+    "Since it's right ascension, we'd expect the minimum to be 0 and the maximum to be 360 degrees (right ascension is like longitude.) Print out the min and max below and reflect on the answer. The functions you need are just called ```min()``` and ```max()```"
    ]
   },
   {
@@ -228,7 +228,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "REFLECTION IN THIS BOX: "
+   ]
   },
   {
    "cell_type": "code",
@@ -267,7 +276,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Your turn!  Now get an array of the declinations instead of the right ascension. The keyword is \"dec\".\n"
+    "### Your turn!  Now get an array of the declinations instead of the right ascension. You will need to edit and re-run the query from a few boxes up. The keyword is \"dec\"."
    ]
   },
   {
@@ -412,7 +421,8 @@
    ],
    "source": [
     "#Now let's plot the right_ascension and declination on the same plot!\n",
-    "plt.plot(right_ascension, declination)"
+    "plt.plot(right_ascension, dec)\n",
+    "declination=dec #This is just do either choice of name works!"
    ]
   },
   {
@@ -458,7 +468,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Your turn!   See here https://matplotlib.org/api/_as_gen/matplotlib.pyplot.plot.html and experiment with some other shapes and colors. You might find the keyword \"markersize\" useful to adjust the point (or marker) size. Just show one of the plots you experimented with below. Also get the plot to show just the range from 120 to 250 in RA and from 0 to 60 in declination."
+    "**Your turn!**   See here https://matplotlib.org/api/_as_gen/matplotlib.pyplot.plot.html and experiment with some other shapes and colors. You might find the keyword \"markersize\" useful to adjust the point (or marker) size. Just show one of the plots you experimented with below. Also get the plot to show just the range from 120 to 250 in RA and from 0 to 60 in declination."
    ]
   },
   {
@@ -484,51 +494,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Now that you're used to getting these statistics, write a function that does all this for any variable you want...\n",
-    "Write a *show_stats* function that takes two inputs, the name of the variable you want from the SDSS database, and the limiting value of the g magnitude, prints the first 10 elements, finds the min, max, and mean, plots a histogram, and returns an array containing that column. Make it so that the printed output explains what you're seeing, i.e. \"the max and min are....blah blah.\"\n",
-    "\n",
-    "One subtlety here is that the \"query\" statement that you've been creating is a string, so it's slightly tricky to write the name of the variable you want to it.  As with everything in Python there are multiple ways to do this.  I did it this way (this is the beginning of my function definition.)\n",
-    "\n",
-    "```ruby\n",
-    "def show_stats(varname, glimit):\n",
-    "    query=\"\"\"   \n",
-    "    SELECT {}\n",
-    "    FROM SpecPhotoAll\n",
-    "    WHERE class = 'galaxy' AND z BETWEEN .02 and .5 AND modelMag_g < {}\n",
-    "    \"\"\".format(varname, glimit)\n",
-    "```\n",
-    "    \n",
-    "The { }'s in the query tell Python where to put _varname_ and _glimit_ into the string. _I'll give you a hint about how I figured this out. I experimented with the query statement all by itself in a cell.  My practice cell looked like this:_ \n",
-    "\n",
-    "```ruby\n",
-    "varname = 'ra'\n",
-    "glimit = 10\n",
-    "query=\"\"\"   \n",
-    "SELECT {}\n",
-    "FROM SpecPhotoAll\n",
-    "WHERE class = 'galaxy' AND z BETWEEN .02 and .5 AND modelMag_g < {}\n",
-    "\"\"\".format(varname, glimit)\n",
-    "\n",
-    "print (query)\n",
-    "```\n",
-    "I encourage you to practice like this a little bit until you get the hang of how this works. Move the { }'s around, try writing your own phrases and putting different words into them, stuff like that.\n",
-    "\n",
-    "Note that your function will crash if you give it a variable name that returns a string (for example 'class' yields a string like 'galaxy' rather than 'ra' which yields a number of degrees). You may assume that no one would be silly enough to try. A better programming practice would be to check first to make sure that the data is of the right type (a number) before trying to take the min, max, or mean. For bonus style points you may make your function more robust so that it appropriately checks the type before doing the calculation.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### And finally get an array of redshift. Keyword is \"z\".   \n",
-    "Use your function!  And make sure to comment on the output you see (the first 10 numbers, the min/max, and the histogram.) And for now set the g magnitude limit to 17 like you did for RA and DEC."
+    "Make sure to inspect and comment on the output you see (the first 10 numbers, the min/max, and the histogram.) And for now set the g magnitude limit to 17 like you did for RA and DEC."
    ]
   },
   {
@@ -547,7 +514,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For fun, let's see what the histogram looks like if we go out another factor of 10 in brightness, which is 5 magnitudes, so out to a limiting g-magnitude of 22. Do that now. (Be sure to celebrate how easy this is now that you have your function!)"
+    "For fun, let's see what the histogram looks like if we go out another factor of 10 in brightness, which is 5 magnitudes, so out to a limiting g-magnitude of 22. Do that now. "
    ]
   },
   {
@@ -601,22 +568,21 @@
     }
    ],
    "source": [
-    "varname='z'\n",
-    "glimit=17\n",
-    "query=\"\"\"   \n",
-    "    SELECT {}\n",
-    "    FROM SpecPhotoAll\n",
-    "    WHERE class = 'galaxy' AND z BETWEEN .02 and .5 AND modelMag_g < {}\n",
-    "    \"\"\".format(varname, glimit)\n",
-    "    \n",
-    "print(\"Running SQL query for \", varname)\n",
+    "query=\"\"\"\n",
+    "SELECT z\n",
+    "FROM SpecPhotoAll\n",
+    "WHERE class = 'galaxy' AND z BETWEEN .02 and .5 AND modelMag_g < 17\n",
+    "\"\"\"\n",
+    "#Then, query the database. The answer is a table that is being returned to a \n",
+    "# dataframe that we've named right_ascension.\n",
+    "z = CasJobs.executeQuery(query, \"dr15\")\n",
+    "z = (np.array(z))[:,0]   #We'll learn more about why you need \n",
+    "# this statement later. For now\n",
+    "# I'll just tell you we're converting it from a table into an array.\n",
+    "#DR15 means \"Data Release 15\" See http://skyserver.sdss.org/dr15\n",
     "\n",
-    "varname = CasJobs.executeQuery(query, \"dr15\")\n",
-    "varname = (np.array(varname))[:,0]   # converting it from a table into an array.    \n",
-    "print(\"SQL query finished\")\n",
-    "print(\"SQL query returned \" + str(len(varname))+ \" galaxies\")\n",
-    "\n",
-    "z=varname"
+    "print(\"SQL query finished.\")\n",
+    "print(\"SQL query returned \" + str(len(right_ascension))+ \" galaxies\")"
    ]
   },
   {
@@ -626,7 +592,7 @@
     "# Converting redshift to distance\n",
     "To convert redshift to distance you multiply by the speed of light,c, and divide by Hubble's Constant,H, which measures the rate of expansion of the universe. \n",
     "\n",
-    "c = 3.0e5 kilometers/second   Please notice that 3.0e5 is Python shorthand for \"3 times 10 to the 5th\". I'll send your workbook back to you immediately if I see any 3.0\\*10**5 in it.\n",
+    "c = 3.0e5 kilometers/second   Please notice that 3.0e5 is Python shorthand for \"3 times 10 to the 5th\". \n",
     "\n",
     "H  = 72.0 km s$^{-1}$Mpc$^{-1}$    Those units are weird.  You can also write it $\\frac{km/s}{Mpc}$. The way I say that is \"kilometers per second per megaparsec\" and I think about it as a velocity (km/s) per distance (Mpc). If a galaxy is 1 Mpc away from us, it will be traveling at a speed of 72.0 km/s away from us. If it's 2 Mpc away from us, it will be traveling at a speed of 144.0 km/s....\n",
     "\n",
@@ -637,14 +603,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "d = z*c/H will have units of km/s/(km/s/Mpc) = Mpc which is a unit of distance. Hooray. "
+    "ANSWER HERE: "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now do the calculation to convert redshift to distance. (You should end up with an array called \"distance.\")"
+    "Now do the calculation to convert redshift to distance. (You should end up with an array called \"distance.\") "
    ]
   },
   {
@@ -681,14 +647,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The values are between those two. "
+    "REFLECT ON YOUR DISTANCE VALUES HERE"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "How many of the distances are close to that lower end? More specifically how many distances are less than 100 Mpc? HINT: how can you make a sub-list with only values <100 Mpc in and count the length of it. "
+    "How many of the distances are close to that lower end? More specifically how many distances are less than 100 Mpc? HINT: how can you make a sub-list with only values <100 Mpc in and count the length of it. A command to count the length of an array is ```len()```."
    ]
   },
   {
@@ -716,7 +682,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The final task will be to make a plot of the sky, with the points showing galaxies being color coded by the galaxy's distance from us. You do this most easilly by making a series of say 3 sets of galaxies selected to have different distance ranges. Experiment with the exact selection of the distance ranges to get an interesting plot As before, get the plot to show just the range from 120 to 250 in RA and from 0 to 60 in declination. Comment on the plot, and why you selected the color ranges you selected. "
+    "The final task will be to make a plot of the sky, with the points showing galaxies being color coded by the galaxy's distance from us. You do this most easilly by making a series of say 3 sets of galaxies selected to have different distance ranges. Experiment with the exact selection of the distance ranges to get an interesting plot.  As before, get the plot to show just the range from 120 to 250 in RA and from 0 to 60 in declination. Comment on the plot, and why you selected the color ranges you selected. \n",
+    "\n",
+    "HINT: plotting a histogram of distance can help you work out an interesting range. \n",
+    "\n",
+    "HINT: to include two slices/filters in an array you need a syntax like this ```x1 = x[(y > 100) & (y < 500)]``` (the parentheses matter for some reason!)"
    ]
   },
   {
@@ -741,9 +711,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8 (py38)",
    "language": "python",
-   "name": "python3"
+   "name": "py38"
   },
   "language_info": {
    "codemirror_mode": {
@@ -755,7 +725,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
